kubernetes/monitoring-user.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
