kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-kubernetes
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: zabbix-kubernetes
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-kubernetes
    spec:
      containers:
        - name: zabbix-kubernetes
          image: zabbix-kubernetes:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "250m"
