kubernetes/ingress-apiserver.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-apiserver
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: "nginx-ingress-internal"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - secretName: tls-global
      hosts:
        - "k8s-test-api.foo.bar"
  backend:
    serviceName: kube-apiserver
    servicePort: 443
  rules:
  - host: "k8s-test-api.foo.bar"
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-apiserver
          servicePort: 443
